--- a/TNG50_GalaxyFiles.ipynb
+++ b/TNG50_GalaxyFiles.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d9553b30",
+   "metadata": {},
+   "source": [
+    "# Example of how to download particle information \n",
+    "# from TNG50 to run the iMaStar and iMaNGA codes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ea2af46b",
+   "execution_count": 1,
+   "id": "31329a38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1ff939c9",
+   "id": "11532d2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,21 +40,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f288602d",
+   "id": "6b703394",
    "metadata": {},
    "source": [
     "## Define which galaxy you want to observe\n",
     "\n",
-    "### https://www.tng-project.org/api/ use the API to investigate the properties of snapshots and subhaloes\n",
+    "### https://www.tng-project.org/api/ use the API\n",
+    "### to investigate the properties of snapshots and subhaloes\n",
     "\n",
     "##### N.B. in Illustris vocabulary subhalo = \"galaxy\"; halo = \"cluster\"\n",
-    "##### N.B. \"galaxy\"/\"halo\" because this is a \"computional/simulation\" definition, not an astrophysics one, but it is ok to use them as galaxies if you check you have more then 10'000 stellar particles and cut to outskirt particles (see Fig. 2 in Nanni+2022)"
+    "##### N.B. Since the definition of \"galaxy\" in the simulation is not an astrophysics one\n",
+    "##### to use them as \"galaxies\"  you need to check if they have more then 10'000 stellar particles\n",
+    "##### and cut to outskirt particles (see Fig. 2 in Nanni+2022)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "55b8b7ed",
+   "id": "d3ac66d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85fc01cf",
+   "id": "1d0023ff",
    "metadata": {},
    "source": [
     "## Stellar particle information"
@@ -68,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dd365372",
+   "id": "713c1151",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "017ea96f",
+   "id": "3ae51890",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,82 +115,89 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6899877b",
+   "id": "2ddbcdde",
    "metadata": {},
    "outputs": [],
    "source": [
-    "coordinate = data[0][:,:]*scale_factor/h\n",
-    "mass = data[1][:]*10**10/h\n",
-    "metallicity = data[2][:]\n",
-    "SFT = data[3][:]\n",
-    "vel = data[4][:,:]/np.sqrt(scale_factor)\n"
+    "coordinate = data[0][:,:]*scale_factor/h #stellar particle position in \n",
+    "# the simulation box [kpc]\n",
+    "\n",
+    "mass = data[1][:]*10**10/h # [M_sun]\n",
+    "metallicity = data[2][:] # Z\n",
+    "SFT = data[3][:] # a at the time of the stellar particle formation\n",
+    "vel = data[4][:,:]/np.sqrt(scale_factor) # stellar particle velocity\n",
+    "#in the simulation box[km/s]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "91540c81",
+   "execution_count": 7,
+   "id": "d089bf4f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This can be used as an example of how to obtain other information\n",
+    "# This can be used as an example of how to obtain other information from TNG50\n",
+    "\n",
     "# For iMaNGA, I constructed catalogue files with the info of the galaxies we wanted to observe\n",
     "# Here, I commented out the different entry just because it takes a bit of time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "1f7c123d",
+   "execution_count": 8,
+   "id": "623dee0f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "SHP = API.getSubhaloField('SubhaloPos', simulation='TNG50-1', snapshot=snap)[gal]/h#a*3.086e+19\n",
-    "#- - - - - - -- - - - - - - - - - - -  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -\n",
+    "# position of the centre of mass of the galaxy:\n",
+    "SHP = API.getSubhaloField('SubhaloPos', simulation='TNG50-1', snapshot=snap)[gal]/h\n",
     "\n",
-    "subhalovelocity = API.getSubhaloField('SubhaloVel', simulation='TNG50-1', snapshot=snap)[gal]/np.sqrt(scale_factor)\n",
+    "# velocity of the centre of mass of the galaxy:\n",
+    "subhalovelocity = API.getSubhaloField('SubhaloVel', simulation='TNG50-1', \\\n",
+    "                                      snapshot=snap)[gal]/np.sqrt(scale_factor)\n",
     "\n",
-    "\n",
+    "# mass of the galaxy:\n",
     "#SubhaloMass = API.getSubhaloField('SubhaloMass', simulation='TNG50-1', snapshot=snap)[gal]*cosmo.h\n",
+    "\n",
+    "#SFR of the galaxy:\n",
     "#SubhaloSFR = API.getSubhaloField('SubhaloSFR', simulation='TNG50-1', snapshot=snap)[gal]\n",
+    "\n",
+    "#half mass stellar radius of the galaxy:\n",
     "HMSR = API.getSubhaloField('SubhaloHalfmassRadType',snapshot=snap,simulation='TNG50-1')[gal, 4]/h \n",
     "\n",
     "#U, B, V, K, g, r, i, z.\n",
     "\n",
-    "#SubhaloStellarPhotometrics_i = iApi.getSubhaloField('SubhaloStellarPhotometrics', simulation='TNG50-1', snapshot=snap)[gal, 6]"
+    "#SubhaloStellarPhotometrics_i = iApi.getSubhaloField('SubhaloStellarPhotometrics',\\\n",
+    "# simulation='TNG50-1', snapshot=snap)[gal, 6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "a83585e2",
+   "execution_count": 9,
+   "id": "d712448a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "starx = coordinate[:,0] - SHP[0]\n",
+    "# we assume the centre of mass of the galaxy as frame of reference \n",
+    "starx = coordinate[:,0] - SHP[0] \n",
     "stary = coordinate[:,1] - SHP[1]\n",
     "starz = coordinate[:,2] - SHP[2]\n",
+    "\n",
+    "#computing the radius\n",
     "RadiusStar = np.sqrt((starx)**2 + (stary)**2 + (starz)**2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "f2d5ab21",
+   "execution_count": 11,
+   "id": "76223b3f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this is necessary to go from the moment \n",
-    "# of the stellar birth to the age of the stars in the moment of the observation "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "187d6ae2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# the following step is necessary to go from the moment \n",
+    "# of the stellar birth given as a\n",
+    "# to the age of the stars in the moment of the observation \n",
+    "\n",
     "RedStar = (1-SFT)/SFT\n",
     "\n",
     "eta = cosmo.lookback_time(RedStar)\n",
@@ -189,15 +208,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "babc1c64",
+   "execution_count": 12,
+   "id": "b2bd7b36",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# we go from Z to [Z/H]\n",
     "metallicita = np.log10(metallicity/0.018)\n",
     "\n",
     "# we cut stellar particles outside 15 times the half_mass_stellar_radius\n",
-    "\n",
     "StarPosition = coordinate[np.where((SFT > 0) & (RadiusStar < 15.*HMSR)) ] - SHP\n",
     "StarMass = mass[np.where((SFT > 0) & (RadiusStar < 15.*HMSR)) ]\n",
     "StarMet = metallicita[np.where((SFT > 0) & (RadiusStar < 15.*HMSR)) ]\n",
@@ -209,55 +228,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "49fd2d83",
+   "execution_count": 13,
+   "id": "4d68d083",
    "metadata": {},
    "outputs": [],
    "source": [
-    "array1 = StarPosition[:,0][Age < 10**-3 ]*10**3 #here we distinguish between young and old stellar particles, you can pick your cut\n",
-    "array2 = StarPosition[:,1][Age < 10**-3 ]*10**3\n",
-    "array3 = StarPosition[:,2][Age < 10**-3 ]*10**3\n",
-    "array4 = h_star[Age < 10**-3 ]\n",
-    "array5 = StarMass[Age < 10**-3 ]*10**-7\n",
-    "array6 = 10**StarMet[Age < 10**-3 ]\n",
-    "array7 = 5.*np.ones(np.shape(array6))\n",
-    "array8 = 5.*np.ones(np.shape(array6))\n",
-    "array9 = 0.1*np.ones(np.shape(array6))\n",
-    "array10 = Vel[:, 0][Age < 10**-3 ]\n",
-    "array11 = Vel[:, 1][Age < 10**-3 ]\n",
-    "array12 = Vel[:, 2][Age < 10**-3 ]\n",
-    "array13 = StarMass[Age < 10**-3 ]\n",
-    "array14 = StarMet[Age < 10**-3 ]\n",
-    "array15 = Age[:][Age < 10**-3 ]\n",
+    "# here we distinguish between young and old stellar particles, you can pick your own cut\n",
+    "\n",
+    "# young stellar particles, i.e. <1 Myr here: \n",
+    "array1 = StarPosition[:,0][Age < 10**-3 ]*10**3 #[pc]\n",
+    "array2 = StarPosition[:,1][Age < 10**-3 ]*10**3 #[pc]\n",
+    "array3 = StarPosition[:,2][Age < 10**-3 ]*10**3 #[pc]\n",
+    "\n",
+    "array4 = h_star[Age < 10**-3 ] #smoothing parameter\n",
+    "array5 = StarMass[Age < 10**-3 ]*10**-7 # computed the [SFR]\n",
+    "array6 = 10**StarMet[Age < 10**-3 ] # [Z/H]\n",
+    "array7 = 5.*np.ones(np.shape(array6)) # logC for MappingsIII\n",
+    "array8 = 5.*np.ones(np.shape(array6)) #logp for MappingsIII\n",
+    "array9 = 0.1*np.ones(np.shape(array6)) #fPDR for MappingsIII\n",
+    "array10 = Vel[:, 0][Age < 10**-3 ] #[km/s]\n",
+    "array11 = Vel[:, 1][Age < 10**-3 ] #[km/s]\n",
+    "array12 = Vel[:, 2][Age < 10**-3 ] #[km/s]\n",
+    "array13 = StarMass[Age < 10**-3 ] # [M_sun]\n",
+    "array14 = StarMet[Age < 10**-3 ] # [Z/H]\n",
+    "array15 = Age[:][Age < 10**-3 ] #[Gyr]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "edda551e",
+   "execution_count": 14,
+   "id": "798d6bf9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "aarray1 = StarPosition[:,0][Age > 10**-3]*10**3\n",
-    "aarray2 = StarPosition[:,1][Age > 10**-3]*10**3\n",
-    "aarray3 = StarPosition[:,2][Age > 10**-3]*10**3\n",
-    "aarray4 = h_star[Age > 10**-3]\n",
-    "aarray5 = StarMass[Age > 10**-3]\n",
-    "aarray6 = StarMet[Age > 10**-3]\n",
-    "aarray7 = Age[:][Age > 10**-3]\n",
-    "aarray8 = Vel[:, 0][Age > 10**-3]\n",
-    "aarray9 = Vel[:, 1][Age > 10**-3]\n",
-    "aarray10 = Vel[:, 2][Age > 10**-3]\n",
-    "aarray11 = np.ones(len(aarray10))*subhalovelocity[0]\n",
-    "aarray12 = np.ones(len(aarray10))*subhalovelocity[1]\n",
-    "aarray13 = np.ones(len(aarray10))*subhalovelocity[2]\n"
+    "# old stellar particles, i.e. >1 Myr here: \n",
+    "\n",
+    "aarray1 = StarPosition[:,0][Age > 10**-3]*10**3 #[pc]\n",
+    "aarray2 = StarPosition[:,1][Age > 10**-3]*10**3 #[pc]\n",
+    "aarray3 = StarPosition[:,2][Age > 10**-3]*10**3 #[pc]\n",
+    "aarray4 = h_star[Age > 10**-3] #smoothing parameter\n",
+    "aarray5 = StarMass[Age > 10**-3] # [M_sun]\n",
+    "aarray6 = StarMet[Age > 10**-3] # [Z/H]\n",
+    "aarray7 = Age[:][Age > 10**-3] #[Gyr]\n",
+    "aarray8 = Vel[:, 0][Age > 10**-3] #stellar particle x velocity [km/s]\n",
+    "aarray9 = Vel[:, 1][Age > 10**-3] #stellar particle y velocity[km/s]\n",
+    "aarray10 = Vel[:, 2][Age > 10**-3] #stellar particle z velocity [km/s]\n",
+    "aarray11 = np.ones(len(aarray10))*subhalovelocity[0] #subhalo x velocity [km/s]\n",
+    "aarray12 = np.ones(len(aarray10))*subhalovelocity[1] #subhalo y velocity [km/s]\n",
+    "aarray13 = np.ones(len(aarray10))*subhalovelocity[2] #subhalo z velocity [km/s]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "e55e5716",
+   "execution_count": 15,
+   "id": "456b338c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,8 +291,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "c1bf2321",
+   "execution_count": 16,
+   "id": "64a7a13b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,13 +301,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "7b9185ca",
+   "execution_count": 17,
+   "id": "26c6cb9d",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"./\"+namegal+\"/\"+namegal+'.dat', 'w') as f:\n",
-    "    for a, b, c, d, e, ss, tt in zip(aarray1, aarray2, aarray3, aarray4, aarray5, aarray6, aarray7):\n",
+    "    for a, b, c, d, e, ss, tt in zip(aarray1, aarray2, \\\n",
+    "                                     aarray3, aarray4, aarray5, aarray6, aarray7):\n",
     "        f.write('{0:} {1:} {2:} {3:} {4:} {5:} {6:}\\n'.format(a, b, c, d, e, ss, tt))\n",
     "\n",
     "with open(\"./\"+namegal+\"/\"+namegal+'velocity.dat', 'w') as f:\n",
@@ -293,7 +319,8 @@
     "\n",
     "if len(array1)>1:\n",
     "    with open(\"./\"+namegal+\"/\"+namegal+'MIII.dat', 'w') as f:\n",
-    "        for a, b, c, d, e, ss, tt, r, s in zip( array1, array2, array3, array4, array5, array6, array7, array8, array9):\n",
+    "        for a, b, c, d, e, ss, tt, r, s in zip( array1, array2, array3, \\\n",
+    "                                               array4, array5, array6, array7, array8, array9):\n",
     "            f.write('{0:} {1:} {2:} {3:} {4:} {5:} {6:} {7:} {8:}\\n'.format(a, b, c, d, e, ss, tt, r, s))\n",
     "\n",
     "    with open(\"./\"+namegal+\"/\"+namegal+'velocityMIII.dat', 'w') as f:\n",
@@ -306,39 +333,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "0201393a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Metallicity = metallicity[np.where((SFT > 0) & (RadiusStar < 15.*HMSR)) ]\n",
-    "s_array1 = StarPosition[:,0][Age > 10**-3]*10**3\n",
-    "s_array2 = StarPosition[:,1][Age > 10**-3]*10**3\n",
-    "s_array3 = StarPosition[:,2][Age > 10**-3]*10**3\n",
-    "s_array4 = h_star[Age > 10**-3]\n",
-    "s_array5 = StarMass[Age > 10**-3]\n",
-    "s_array6 = Metallicity[Age > 10**-3]\n",
-    "s_array7 = Age[:][Age > 10**-3]*10**9\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "2315b94a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#files to run SKIRT\n",
-    "\n",
-    "with open(\"./\"+namegal+\"/\"+namegal+'_skirt.dat', 'w') as f:\n",
-    "    for a, b, c, d, e, ss, tt in zip(s_array1, s_array2, s_array3, s_array4, s_array5, s_array6, s_array7):\n",
-    "        f.write('{0:} {1:} {2:} {3:} {4:} {5:} {6:}\\n'.format(a, b, c, d, e, ss, tt))\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "465f4406",
+   "id": "48d485e9",
    "metadata": {},
    "source": [
     "## Gas particles information"
@@ -346,8 +342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "48f56d07",
+   "execution_count": 20,
+   "id": "ef0dbade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,20 +363,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "cdf8bfb2",
+   "execution_count": null,
+   "id": "b4bfb393",
    "metadata": {},
    "outputs": [],
    "source": [
-    "coordinategas = data_dust[0][:,:]*scale_factor/h  \n",
-    "massgas = data_dust[1][:]*10**10/h \n",
-    "metallicitygas = data_dust[2][:]\n",
+    "#gas particle information:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d97ddd9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordinategas = data_dust[0][:,:]*scale_factor/h  #[kpc] \n",
+    "massgas = data_dust[1][:]*10**10/h #M_sun\n",
+    "metallicitygas = data_dust[2][:] # Z\n",
     "Energy = data_dust[3][:]\n",
     "ElecAbb = data_dust[4][:]\n",
     "SFRgas = data_dust[5][:]\n",
-    "vel_gas = data_dust[6][:,:]/np.sqrt(scale_factor)\n",
+    "vel_gas = data_dust[6][:,:]/np.sqrt(scale_factor) #[km/s]\n",
     "\n",
-    "RadiusDustC = ((coordinategas[:,0]-SHP[0])**2+(coordinategas[:,1]-SHP[1])**2+(coordinategas[:,2]-SHP[2])**2)\n",
+    "RadiusDustC = ((coordinategas[:,0]-SHP[0])**2+\\\n",
+    "               (coordinategas[:,1]-SHP[1])**2+(coordinategas[:,2]-SHP[2])**2)\n",
+    "\n",
     "RadiusDust = np.sqrt(RadiusDustC)\n",
     "VelGas = vel_gas - subhalovelocity\n",
     "\n",
@@ -395,18 +403,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "5bc23d2b",
+   "execution_count": 22,
+   "id": "2aba3101",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Dust_pos_x = (coordinategas[:,0]-SHP[0])*10**3\n",
-    "Dust_pos_y = (coordinategas[:,1]-SHP[1])*10**3\n",
-    "Dust_pos_z = (coordinategas[:,2]-SHP[2])*10**3\n",
+    "Dust_pos_x = (coordinategas[:,0]-SHP[0])*10**3 #pc\n",
+    "Dust_pos_y = (coordinategas[:,1]-SHP[1])*10**3 #pc\n",
+    "Dust_pos_z = (coordinategas[:,2]-SHP[2])*10**3 #pc\n",
     "\n",
+    "# cutting particles outside 15HMSR\n",
     "dust_x = Dust_pos_x[ (SFRgas>0.) & (RadiusDust<15.*HMSR)]\n",
     "dust_y = Dust_pos_y[ (SFRgas>0.) & (RadiusDust<15.*HMSR)]\n",
     "VelGas = VelGas[ (SFRgas>0.) & (RadiusDust<15.*HMSR)]\n",
+    "\n",
     "aarray6 = dust_x\n",
     "aarray7 = dust_y\n",
     "aarray8 = VelGas[:, 0]\n",
@@ -416,8 +426,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "010ed4d2",
+   "execution_count": 23,
+   "id": "123ee54a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,8 +438,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "edf92f02",
+   "execution_count": 24,
+   "id": "513e9910",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,11 +449,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "1574e4ae",
+   "execution_count": 25,
+   "id": "75050c9e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# here we remuve the dast particles in the same region as MIII regions\n",
+    "# since MIII alread account for dust\n",
+    "\n",
     "if len(array1)>1:\n",
     "    from scipy import spatial\n",
     "    gas_position = np.column_stack((Dust_pos_x,Dust_pos_y, Dust_pos_z))\n",
@@ -468,8 +481,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "34a2fade",
+   "execution_count": 26,
+   "id": "cd5d0a3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,14 +513,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7028ce15",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
