--- a/iMaNGA_VAC_Example.ipynb
+++ b/iMaNGA_VAC_Example.ipynb
@@ -1,9 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "24d76fb6",
+   "metadata": {},
+   "source": [
+    "# Example of possible use of the iMaNGA VAC"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f620275",
+   "metadata": {},
+   "source": [
+    "## the iMaNGA VAC can be download here\n",
+    "\n",
+    "### https://www.tng-project.org/data/docs/specifications/#sec5_4\n",
+    "\n",
+    "### The description of the data structure is in the same page"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ca9286a5",
+   "id": "269368f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +57,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "id": "15af782c",
+   "execution_count": null,
+   "id": "c9d2ac0d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "VAC =  fits.open(\"/mnt/lustre2/manga/iMaNGA_VAC.fit\")\n"
+    "# load the iMaNGA VAC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04c8c669",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "VAC =  fits.open(\"./iMaNGA_VAC.fit\")"
    ]
   },
   {
@@ -231,7 +261,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -245,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
