--- a/iMANGA_mockMaNGAdatacubes.ipynb
+++ b/iMANGA_mockMaNGAdatacubes.ipynb
@@ -257,7 +257,7 @@
    "source": [
     "As presented in Nanni+2022, we define the SNR as a function of the wavelength from MaNGA observation. \n",
     "\n",
-    "The data are here available. Change the path accordingly. \n",
+    "The data are here available through SDSS. Change the path accordingly. \n",
     "\n",
     "Including here another SNR function, other mocks can be created\n"
    ]
