--- a/iMANGA_mockMaNGAdatacubes.ipynb
+++ b/iMANGA_mockMaNGAdatacubes.ipynb
@@ -257,7 +257,7 @@
    "source": [
     "As presented in Nanni+2022, we define the SNR as a function of the wavelength from MaNGA observation. \n",
     "\n",
-    "The data are here available through SDSS. Change the path accordingly. \n",
+    "The data are here available here. This is computed as the average of SNR functions for 100 randomly selected MaNGA galaxies, considering the spectra at around 1.5 Reff. Change the path accordingly. \n",
     "\n",
     "Including here another SNR function, other mocks can be created\n"
    ]
@@ -269,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "snr_file = np.genfromtxt(\"./iMaNGA/snr_smoo.dat\")\n",
+    "snr_file = np.genfromtxt(\"./iMaNGA/snr_average.dat\")\n",
     "\n",
     "snr = snr_file[:,1]"
    ]
