--- a/iMANGA_mockMaNGAdatacubes.ipynb
+++ b/iMANGA_mockMaNGAdatacubes.ipynb
@@ -314,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "redshift = VAC[1].data[2][galaxy_id_VAC]"
+    "redshift = VAC[1].data[galaxy_id_VAC][2]"
    ]
   },
   {
